--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 150px 500px;
 }
 
 .lines {
@@ -15,6 +16,11 @@
     border-color: blue;
     text-align: center;
     padding: 6px;
-    width: 102px;
-    height:102px;
+    width: 60px;
+    height:20px;
 }
+
+body {
+    margin: 0;
+}
+
