--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 150px 500px;
+    margin: 50px 500px 150px;
 }
 
 .lines {
@@ -22,5 +22,15 @@
 
 body {
     margin: 0;
+}
+
+#btn {
+    margin: 40px 900px;
+    margin-top: 90px;
+    padding: 4px 8px;
+    background-color: rgb(109, 109, 236);
+    color: white;
+    border-radius: 80%;
+    border-color: rgb(109, 109, 236);
 }
 
