--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ body {
 
 #btn {
     margin: 40px 900px;
-    margin-top: 90px;
-    padding: 4px 8px;
+    margin-top: 30px;
+    margin-left: 930px;
+    padding: 6px 10px;
     background-color: rgb(109, 109, 236);
     color: white;
     border-radius: 80%;
